--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body style="background-color:{{.Bg}}">
+<body style="background-color:#{{.Bg}}">
 	<div class="status-bar">
 
 		<form action="/" method="GET" class="form" id="location_form"
@@ -17,9 +17,12 @@
 			<select name="lang" id="select_lang">
 				{{.LocaleOptions}}
 			</select>
-		<span>🏠</span>
-		<input type="text" name="location" id="location_input" value="{{.Location}}" 
-			autocomplete=off >
+			<span>🏠</span>
+			<input type="text" name="location" id="location_input" value="{{.Location}}" 
+				autocomplete=off >
+			<span>🎨</span>
+			<input type="text" name="bg" id="background" value="{{.Bg}}" 
+				autocomplete=off style="width:60px" >
 		</form>	
 		<a id="coins" href="https://rate.sx/" target="_blank" style="float: right; display: inline-block; margin: 10px; text-decoration: none; color: beige">{{.Coins}}</a>
 
@@ -73,10 +76,8 @@
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
 
-			var fiatSelect = document.getElementById("fiat_select")
-			var coinCode = fiatSelect.value
-			var formatSelect = document.getElementById("select_lang")
 
+			var formatSelect = document.getElementById("select_lang")
 			var dayForecast = new Date(Date.now()) 
 			dayForecast.setDate(dayForecast.getDate()+1)
 			var tomorrow_forecast = document.getElementById("first_date")
@@ -106,6 +107,10 @@
 					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
 					var weatherInput = document.getElementById("weather-input")
 					weatherInput.placeholder = weatherInputDict[prefix]
+
+					var bgColor = document.getElementById("background")
+					document.cookie = "bgColor="+encodeURI(bgColor.value)+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
+
 				}
 				
 			}
@@ -139,6 +144,8 @@
 				weatherInput.placeholder = weatherInputDict[prefix]
 			}
 
+
+			var fiatSelect = document.getElementById("fiat_select")
 			fiatSelect.onchange = function() {
 				const options = {
 					method: "POST",
@@ -153,7 +160,7 @@
 				
 				var date = new Date(Date.now())
 				date.setFullYear(date.getFullYear()+1)
-				document.cookie = "coin_code="+this.value+"; Path=/; SameSite=None; Secure"
+				document.cookie = "coin_code="+this.value+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
 				fetch("/base_info", options).then(res => res.json())
 					.then(res => {
 					fiatSymbol = { "usd": "$", "eur": "€", "czk": "Kč", "gbp": "£", "btc": "<img src=\"./pics/bitcoin-icon.svg\">" }
