index.html: create link

--- a/web/index.html
+++ b/web/index.html
@@ -35,7 +35,7 @@
 	</nav>
 
 	<main  style="margin-top: 20px;">
-		<p id="curr">💵{{.Currency}}</p>
+		<a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">💵{{.Currency}}</a>
 		<div id="text_forecast">
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
 			<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
