Added name day function

--- a/web/index.html
+++ b/web/index.html
@@ -36,6 +36,7 @@
 	</nav>
 
 	<main  style="margin-top: 20px;">
+		<a href="https://svatek.michalkukla.xyz/" style="text-decoration: none; color:beige" >📆 {{.NameDay}}</p>
 		<a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">💵{{.Currency}}</a>
 		<div id="text_forecast">
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
