--- a/web/index.html
+++ b/web/index.html
@@ -80,21 +80,20 @@
 			var day = new Date(Date.now()) 
 			var month = day.getMonth() + 1
 			if ((month == 12 && day.getDate() > 22) || month == 1) {
-				var relevant = document.getElementById("relevant")
 				if (day.getDate() == 1) {
-					relevant.innerHTML = relevant.innerHTML+"🎇"
+					document.getElementById("relevant").innerHTML = relevant.innerHTML+"🎇"
 				}
-				relevant.innerHTML = relevant.innerHTML+"🎄"
+				document.getElementById("relevant").innerHTML = relevant.innerHTML+"🎄"
 			}
 			day.setDate(day.getDate()+1)
-			var tomorrow_forecast = document.getElementById("first_date")
-			date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(day)
-			tomorrow_forecast.innerHTML = date_output
+			date_output = new Intl.DateTimeFormat(formatSelect.value, 
+				{weekday: "long", day:"numeric", month:"long"}).format(day)
+			document.getElementById("first_date").innerHTML = date_output
 
-			var next_forecast = document.getElementById("second_date")
 			day.setDate(day.getDate()+1)
-			date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(day)
-			next_forecast.innerHTML = date_output
+			date_output = new Intl.DateTimeFormat(formatSelect.value, 
+				{weekday: "long", day:"numeric", month:"long"}).format(day)
+			document.getElementById("second_date").innerHTML = date_output
 
 
 			document.getElementById("save_btn").onclick = function () {
@@ -110,9 +109,9 @@
 					var prefix = formatSelect.value.split("-")[0]
 					weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background="+bgColor.value+"_lang="+prefix+".png"
 
-					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
-					var wttrLink = document.getElementById("wttr-link")
-					wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
+					var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", 
+								"en": "Weather in..." }
+					document.getElementById("wttr-link").href = "https://wttr.in/"+place+"?lang="+prefix
 					var weatherInput = document.getElementById("weather-input")
 					weatherInput.placeholder = weatherInputDict[prefix]
 
@@ -132,8 +131,7 @@
 						var bgColor = document.getElementById("background")
 						var prefix = formatSelect.value.split("-")[0]
 						weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background="+bgColor.value+"_lang="+prefix+".png"
-						var wttrLink = document.getElementById("wttr-link")
-						wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
+						document.getElementById("wttr-link").href = "https://wttr.in/"+place+"?lang="+prefix
 					}
 
 				}
@@ -145,14 +143,12 @@
 				document.cookie = "lang="+formatSelect.value+"; expires="+date.toUTCString()+"; Path=/; SameSite=None; Secure"
 				var day = new Date(Date.now()) 
 				day.setDate(day.getDate()+1)
-				var tomorrow_forecast = document.getElementById("first_date")
 				date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(day)
-				tomorrow_forecast.innerHTML = date_output
+				document.getElementById("first_date").innerHTML = date_output
 
-				var next_forecast = document.getElementById("second_date")
 				day.setDate(day.getDate()+1)
 				date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(day)
-				next_forecast.innerHTML = date_output
+				document.getElementById("second_date").innerHTML = date_output
 
 
 				var weatherImg = document.getElementById("weather-img")
@@ -160,11 +156,10 @@
 				var inputLocation = document.getElementById("location_input")	
 				var place = inputLocation.value
 				var bgColor = document.getElementById("background")
-				weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background="+bgColor+"_lang="+prefix+".png"
+				weatherImg.src =  "https://wttr.in/"+place+"_0pq_transparency=255_background="+bgColor.value+"_lang="+prefix+".png"
 
-				var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "us": "Weather in..." }
-				var wttrLink = document.getElementById("wttr-link")
-				wttrLink.href = "https://wttr.in/"+place+"?lang="+prefix
+				var weatherInputDict= { "cs": "Počasí v...", "de": "Wetter für...", "en": "Weather in..." }
+				document.getElementById("wttr-link").href = "https://wttr.in/"+place+"?lang="+prefix
 				var weatherInput = document.getElementById("weather-input")
 				weatherInput.placeholder = weatherInputDict[prefix]
 			}
