Little cosmetic changes

--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
 		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' width=360 height=227 style="margin: 5px"></a>
 		<!-- forecast for next days -->
 		<a href='./pics/forecast_tmrw.gif' id="forecast_href"><img src='./pics/forecast_tmrw.webp' id="forecast" width=237 height=290 style="margin: 5px"></a>
-		<div style="margin: 5px">
+		<div>
 				{{.RssFeed}}
 		</div>
 
@@ -181,7 +181,7 @@
 		</script>
 
 	</main>
-	<footer >
+	<footer>
 		<p style="float:left"> <a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a></p>
 		<p style="font-size: x-small">Personal Home Page</p>
 		<p style="font-size: x-small">🌳Marlen</p>
