--- a/web/index.html
+++ b/web/index.html
@@ -36,8 +36,8 @@
 </nav> -->
 
 	<main  style="margin-top: 20px;">
-		<a href="https://svatek.michalkukla.xyz/">📆 {{.NameDay}}</p>
-		<a id="curr" href="https://czk.michalkukla.xyz/">💵{{.Currency}}</a>
+		<a href="https://svatek.michalkukla.xyz/" style="text-decoration: none; color:beige" >📆 {{.NameDay}}</p>
+		<a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">💵{{.Currency}}</a>
 		<div id="text_forecast">
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
 			<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
@@ -73,9 +73,6 @@
 		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' width=360 height=227 style="margin: 5px"></a>
 		<!-- forecast for next days -->
 		<a href='./pics/forecast_tmrw.gif' id="forecast_href"><img src='./pics/forecast_tmrw.webp' id="forecast" width=237 height=290 style="margin: 5px"></a>
-		<div style="margin: 5px">
-				{{.RssFeed}}
-		</div>
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
@@ -170,14 +167,6 @@
 				weatherInput.placeholder = weatherInputDict[prefix]
 			}
 
-			var dateSpanList = document.getElementsByClassName("date")
-			for (var i = 0; i < dateSpanList.length; i++) {
-				console.log(dateSpanList[i].innerHTML)
-				time = dateSpanList[i].innerHTML
-				var d = new Date(time)
-				var date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(d)
-				dateSpanList[i].innerHTML = date_output
-			}
 		</script>
 
 	</main>
