Print out public ip address

--- a/web/index.html
+++ b/web/index.html
@@ -26,13 +26,14 @@
 				autocomplete=off style="width:60px" >
 			<span id="relevant"></span>
 		</form>	
+		<p id="otherInfo" style="margin-top: 5px">{{.OtherInfo}}</p>
 
 	</div>
 	<hr style="color: beige">
 <!--	<nav id="nav">
-		<ul>
-			<li><a href="./forecast.html">🌧️📅</a></li>
-		</ul>
+			<ul>
+				<li><a href="./forecast.html">🌧️📅</a></li>
+			</ul>
 </nav> -->
 
 	<main  style="margin-top: 20px;">
