--- a/web/index.html
+++ b/web/index.html
@@ -37,20 +37,22 @@
 </nav> -->
 
 	<main  style="margin-top: 20px;">
-		<a href="https://svatek.michalkukla.xyz/" style="text-decoration: none; color:beige" >📆 {{.NameDay}}</p>
-		<a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">💵{{.Currency}}</a>
+		<div class="cs-CZ">
+		<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/" style="text-decoration: none; color:beige" >📆 {{.NameDay}}</p>
+		<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">💵{{.Currency}}</a></p>
+		</div>
 		<div id="text_forecast">
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
 			<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
 		</div>
-		<div id="english" style="display:inline-block; margin-left: 20px">
+		<div class="cs-CZ" id="english" style="display:inline-block; margin-left: 20px">
 			<h4 style="display:inline-block">English</h4>
 			<form action="https://slovniky.lingea.cz/anglicko-cesky/" autocomplete="off" method="get" style="display:inline-block">
 				<input id="topic" name="word" type="text" maxlength="50" autocomplete="off">
 				<button type="submit" id="submit">OK</button>
 			</form>
 		</div>
-		<div id="deutsch" style="display: inline-block; margin-left: 20px">
+		<div class="cs-CZ" id="deutsch" style="display: inline-block; margin-left: 20px">
 			<h4 style="display: inline-block">Deutsch</h4>
 			<form action="https://slovniky.lingea.cz/nemecko-cesky/" autocomplete="off" method="get" style="display:inline-block">
 				<input id="topic" name="word" type="text" maxlength="50" autocomplete="off">
