--- a/web/index.html
+++ b/web/index.html
@@ -75,7 +75,8 @@
 		<!-- sun and clouds -->
 		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' width=360 height=227 style="margin: 5px"></a>
 		<!-- forecast for next days -->
-		<a href='./pics/forecast_tmrw.gif' id="forecast_href"><img src='./pics/forecast_tmrw.webp' id="forecast" width=237 height=290 style="margin: 5px"></a>
+		<a href='./pics/forecastPrecip_0days.gif' id="forecast_href"><img src='./pics/forecastPrecip_0days.webp' id="forecast" width=237 height=290 style="margin: 5px"></a>
+		<a href='./pics/forecastPrecip_1days.gif' id="forecast_href"><img src='./pics/forecastPrecip_1days.webp' id="forecast" width=237 height=290 style="margin: 5px"></a>
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
