--- a/web/index.html
+++ b/web/index.html
@@ -77,7 +77,11 @@
 		<a href='./pics/rain.gif' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
 		<!-- sun and clouds -->
 		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' width=360 height=227 style="margin: 5px"></a>
-
+		<a href='./pics/forecastPrecip_0days.gif' ><img src='./pics/forecastPrecip_0days.webp' width=237 height=290 style="margin: 5px"></a>
+		<a href='./pics/forecastTemp_0days.gif' ><img src='./pics/forecastTemp_0days.webp' width=237 height=290 style="margin: 5px"></a>
+		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' width=237 height=290 style="margin: 5px"></a>
+		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' width=237 height=290 style="margin: 5px"></a>
+		<p>🙌Credits to <a href="https://sat24.com" style="text-decoration:none">sat24.com</a> for weather images.</p>
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
 			
