--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
 	<main  style="margin-top: 20px;">
 		<div class="cs-CZ">
 		<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/" style="text-decoration: none; color:beige" >📆 {{.NameDay}}</p>
-		<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">💵{{.Currency}}</a></p>
+		<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/" style="text-decoration: none; color:beige">{{.Currency}}</a></p>
 		</div>
 		<div id="text_forecast">
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
@@ -81,7 +81,7 @@
 		<a href='./pics/forecastTemp_0days.gif' ><img src='./pics/forecastTemp_0days.webp' width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' width=237 height=290 style="margin: 5px"></a>
-		<p>🙌Credits to <a href="https://sat24.com" style="text-decoration:none">sat24.com</a> for weather images.</p>
+		<p>The images present on this page may be subject to copyright.</p>
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
 			
@@ -181,7 +181,7 @@
 	<footer >
 		<p style="float:left"> <a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a></p>
 		<p style="font-size: x-small">Personal Home Page</p>
-		<p style="font-size: x-small">🌳Marlen</p>
+		<p style="font-size: x-small">🇨🇿🌳Marlen</p>
 	</footer>
 </body>
 </html>
