Added crypto addresses

--- a/web/index.html
+++ b/web/index.html
@@ -112,7 +112,7 @@ footer{	margin-top: 2em;
 		<a href='./pics/forecastTemp_0days.gif' ><img src='./pics/forecastTemp_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
-		<p>The images present on this page may be subject to copyright.</p>
+		<p>⚠️The images present on this page may be subject to copyright.</p>
 		<div style="margin: 5px">
 				{{.RssFeed}}
 		</div>
@@ -221,10 +221,13 @@ footer{	margin-top: 2em;
 		</script>
 
 	</main>
-	<footer >
-		<p style="float:left"> <a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a></p>
-		<p style="font-size: x-small">Personal Home Page</p>
-		<p style="font-size: x-small">🌳Marlen</p>
+	<footer style="font-size: small">
+		<p>Personal Home Page</p>
+		<p>🇨🇿🌳Marlen, <a href="https://michalkukla.xyz/donate" target="_blank">🪙</a>, <a href="mailto:michal@michalkukla.xyz">📧</a>,
+		<a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a>
+		</p>
+		<p style="font-size: x-small">XMR: 48CgBgPdCvEe9Ah1gR5PswU84NDvPrYvCJpCDuuXsscDf9nppDCreir5CuLDHmRLSkYG3jZgoCq4mC7maoHS471E2n4oCdt</p>
+		<p style="font-size: x-small">BTC: bc1qqyfwymwdxfmfzgdf86r7lyqu05dzvc467wm4vc</p>
 	</footer>
 </body>
 </html>
