--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 <style>
 body{	max-width:800px; margin: auto; background-color: #893531; color:beige;}
 a{	text-decoration:none; color:beige}
+ul li a:hover{color: gray}
 input{	margin: 0px; 
 	padding: 0px 0px 0px 2px;
 	border-radius:0px;
