--- a/web/index.html
+++ b/web/index.html
@@ -62,11 +62,11 @@ footer{	margin-top: 2em;
 
 	</div>
 	<hr style="color: beige">
-<!--	<nav id="nav">
+	<nav id="nav">
 			<ul>
-				<li><a href="./forecast.html">🌧️📅</a></li>
+				<li><a href="./feeds.html">📜</a></li>
 			</ul>
-</nav> -->
+	</nav>
 
 	<main  style="margin-top: 20px;">
 		<div class="cs-CZ">
@@ -114,9 +114,6 @@ footer{	margin-top: 2em;
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_1days.gif' ><img src='./pics/forecastPrecip_1days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<p>⚠️The images present on this page may be subject to copyright.</p>
-		<div style="margin: 5px">
-				{{.RssFeed}}
-		</div>
 
 		<script async="" src="./js/module-wttrin-widget.js"></script>
 		<script>
@@ -209,15 +206,6 @@ footer{	margin-top: 2em;
 				document.getElementById("wttr-link").href = "https://wttr.in/"+place+"?lang="+prefix
 				var weatherInput = document.getElementById("weather-input")
 				weatherInput.placeholder = weatherInputDict[prefix]
-			}
-
-			var dateSpanList = document.getElementsByClassName("date")
-			for (var i = 0; i < dateSpanList.length; i++) {
-				console.log(dateSpanList[i].innerHTML)
-				time = dateSpanList[i].innerHTML
-				var d = new Date(time)
-				var date_output = new Intl.DateTimeFormat(formatSelect.value, {weekday: "long", day:"numeric", month:"long"}).format(d)
-				dateSpanList[i].innerHTML = date_output
 			}
 		</script>
 
