--- a/web/index.html
+++ b/web/index.html
@@ -212,7 +212,8 @@ footer{	margin-top: 2em;
 	</main>
 	<footer style="font-size: small">
 		<p>Personal Home Page</p>
-		<p>🇨🇿🌳Marlen, <a href="https://michalkukla.xyz/donate" target="_blank">🪙</a>, <a href="mailto:michal@michalkukla.xyz">📧</a>,
+		<p>🇨🇿🌳Marlen, <a href="https://michalkukla.xyz/">🏠</a>, 
+		<a href="https://michalkukla.xyz/donate">🪙</a>, <a href="mailto:michal@michalkukla.xyz">📧</a>,
 		<a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a>
 		</p>
 		<p style="font-size: x-small">XMR: 48CgBgPdCvEe9Ah1gR5PswU84NDvPrYvCJpCDuuXsscDf9nppDCreir5CuLDHmRLSkYG3jZgoCq4mC7maoHS471E2n4oCdt</p>
