Footer back to normal

--- a/web/index.html
+++ b/web/index.html
@@ -210,14 +210,10 @@ footer{	margin-top: 2em;
 		</script>
 
 	</main>
-	<footer style="font-size: small">
+	<footer style="font-size: x-small">
 		<p>Personal Home Page</p>
-		<p>🇨🇿🌳Marlen, <a href="https://michalkukla.xyz/">🏠</a>, 
-		<a href="https://michalkukla.xyz/donate">🪙</a>, <a href="mailto:michal@michalkukla.xyz">📧</a>,
-		<a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a>
+		<p>🌳Marlen, <a href="https://github.com/Solamil/marlen"><img src="/pics/git-icon.svg"></a>
 		</p>
-		<p style="font-size: x-small">XMR: 48CgBgPdCvEe9Ah1gR5PswU84NDvPrYvCJpCDuuXsscDf9nppDCreir5CuLDHmRLSkYG3jZgoCq4mC7maoHS471E2n4oCdt</p>
-		<p style="font-size: x-small">BTC: bc1qqyfwymwdxfmfzgdf86r7lyqu05dzvc467wm4vc</p>
 	</footer>
 </body>
 </html>
