--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body{	max-width:800px; margin: auto; background-color: #893531; color:beige;}
+body{	/*max-width:800px; margin: auto; */ background-color: #893531; color:beige;}
 a{	text-decoration:none; color:beige}
 ul li a:hover{color: gray}
 input{	margin: 0px; 
@@ -70,12 +70,12 @@ footer{	margin-top: 2em;
 
 	<main  style="margin-top: 20px;">
 		<div class="cs-CZ">
-		<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/">📆Dnes má svátek {{.NameDay}}</p>
-		<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/">{{.Currency}}</a></p>
-		</div>
-		<div id="text_forecast">
-			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
-			<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
+			<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/">📆Dnes má svátek {{.NameDay}}</p>
+			<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/">{{.Currency}}</a></p>
+			<div id="text_forecast" style="display:inline-block">
+				<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
+				<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
+			</div>
 		</div>
 		<div class="cs-CZ" id="english" style="display:inline-block; margin-left: 20px">
 			<h4 style="display:inline-block">English</h4>
@@ -92,6 +92,13 @@ footer{	margin-top: 2em;
 			</form>
 		</div>
 		<div>
+			<div style="display: inline-block">
+				<!-- rain -->
+				<a href='./pics/rain.gif' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
+				<!-- sun and clouds -->
+				<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' loading=lazy width=360 height=227 style="margin: 5px"></a>
+			</div>
+			<a href='https://www.mnhradiste.cz/kamera/mhcam1.jpg' target="_blank"><img src='./pics/mhcam1.webp' id="forecast" loading=lazy width=340 height=200 style="margin: 5px; display:inline-block"></a>
 			<div id="wttr-in-module" style="display: inline-block">
 				<a href='{{.WttrLink}}' target="_blank" target='wttr.in' id="wttr-link"><image id="weather-img" src='{{.WttrSrc}}' loading=lazy alt="Current weather in"></a>
 				<form id="weather-form">
@@ -101,14 +108,9 @@ footer{	margin-top: 2em;
 					<button id="weather-btn" type="button">OK</button>
 				</form>
 			</div>
-			<a href='https://www.mnhradiste.cz/kamera/mhcam1.jpg' target="_blank"><img src='./pics/mhcam1.webp' id="forecast" loading=lazy width=340 height=200 style="margin: 5px; display:inline-block"></a>
 		</div>
 
 		
-		<!-- rain -->
-		<a href='./pics/rain.gif' id="link_sat24"><image src='./pics/rain.webp' id="img_sat24" width=360 height=227 loading=lazy style="margin: 5px"></a>
-		<!-- sun and clouds -->
-		<a href='./pics/clouds.gif' ><img src='./pics/clouds.webp' loading=lazy width=360 height=227 style="margin: 5px"></a>
 		<a href='./pics/forecastPrecip_0days.gif' ><img src='./pics/forecastPrecip_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastTemp_0days.gif' ><img src='./pics/forecastTemp_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
 		<a href='./pics/forecastWind_0days.gif' ><img src='./pics/forecastWind_0days.webp' loading=lazy width=237 height=290 style="margin: 5px"></a>
