--- a/web/index.html
+++ b/web/index.html
@@ -72,6 +72,7 @@ footer{	margin-top: 2em;
 		<div class="cs-CZ">
 		<p style="display:inline-block"><a href="https://svatek.michalkukla.xyz/">📆Dnes má svátek {{.NameDay}}</p>
 		<p style="display:inline-block"><a id="curr" href="https://czk.michalkukla.xyz/">{{.Currency}}</a></p>
+		<p><a id="cryptocurr" href="https://rate.sx/" target="_blank">{{.CryptoCurrency}}</a></p>
 		</div>
 		<div id="text_forecast">
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
