--- a/web/index.html
+++ b/web/index.html
@@ -78,17 +78,15 @@ footer{	margin-top: 2em;
 			<p id="tomorrow_forecast" style="display: inline-block"><span id="first_date"></span> {{.ForecastFirst}}</p>
 			<p id="next_forecast" style="display: inline-block"><span id="second_date"></span> {{.ForecastSecond}}</p>
 		</div>
-		<div class="cs-CZ" id="english" style="display:inline-block; margin-left: 20px">
-			<h4 style="display:inline-block">English</h4>
+		<div class="cs-CZ" id="english" style="display:inline-block; margin:20px;">
 			<form action="https://slovniky.lingea.cz/anglicko-cesky/" autocomplete="off" method="get" style="display:inline-block">
-				<input id="topic" name="word" type="text" maxlength="50" autocomplete="off">
+				<input id="topic" name="word" type="text" placeholder="English" maxlength="50" autocomplete="off">
 				<button type="submit" id="submit">OK</button>
 			</form>
 		</div>
-		<div class="cs-CZ" id="deutsch" style="display: inline-block; margin-left: 20px">
-			<h4 style="display: inline-block">Deutsch</h4>
+		<div class="cs-CZ" id="deutsch" style="display: inline-block; margin:20px;">
 			<form action="https://slovniky.lingea.cz/nemecko-cesky/" autocomplete="off" method="get" style="display:inline-block">
-				<input id="topic" name="word" type="text" maxlength="50" autocomplete="off">
+				<input id="topic" name="word" type="text" placeholder="Deutsch" maxlength="50" autocomplete="off">
 				<button type="submit" id="submit">OK</button>
 			</form>
 		</div>
